# arduide

./: .gitignore  CMakeLists.txt  IDEApplication.cpp  IDEApplication.h
env/: Board.cpp  Builder.cpp  Toolkit.cpp
gui/: Browser.cpp  Browser.h  FirstTimeWizard.cpp  FirstTimeWizard.h  LexerArduino.cpp  MainWindow.cpp  MainWindow.h  PageRenderer.cpp
plugins/: CMakeLists.txt
plugins/debugger/: DebuggerPlugin.cpp
plugins/serial/: SerialPlugin.cpp  SerialWriteDialog.cpp
utils/hexview/: QHexView.cpp  format_address.h
utils/qxt/: qxtconfigdialog.h  qxtconfigwidget.cpp  qxtconfigwidget.h  qxtlineedit.cpp
